src/objects/Payments__c.object
<CustomObject>
    <description>Overview of Payments</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounting_Date__c</fullName>
        <description>Date of payment</description>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of payment</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Bank_Account__c</fullName>
        <label>Bank Account</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <description>Method of payment applied</description>
        <label>Method of Payment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Agent_Details__c</fullName>
        <label>Payment Agent Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Agent_Sub_Type__c</fullName>
        <label>Payment Agent Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payment_Agent_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMB (Office, ABC, EOS, Cust Care Center)</fullName>
                </value>
                <value>
                    <fullName>Cpay (satellite Ofc)</fullName>
                </value>
                <value>
                    <fullName>CBG (office)</fullName>
                </value>
                <value>
                    <fullName>Specific bank</fullName>
                </value>
                <value>
                    <fullName>Bayad Center</fullName>
                </value>
                <value>
                    <fullName>Smart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Agent_Type__c</fullName>
        <label>Payment Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meralco</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <description>Payment ID from back-end</description>
        <externalId>true</externalId>
        <label>Payment ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Platform_Type__c</fullName>
        <label>Payment Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Over-the-Counter (OTC)</fullName>
                </value>
                <value>
                    <fullName>Online/Internet</fullName>
                </value>
                <value>
                    <fullName>Self-Service Payment Machine</fullName>
                </value>
                <value>
                    <fullName>ATM banking</fullName>
                </value>
                <value>
                    <fullName>Phone Banking</fullName>
                </value>
                <value>
                    <fullName>Mobile Application</fullName>
                </value>
                <value>
                    <fullName>Auto Debit</fullName>
                </value>
                <value>
                    <fullName>Auto Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <description>Reference of the payment</description>
        <label>Payment Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Timeliness__c</fullName>
        <label>Payment Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Due Date</fullName>
                </value>
                <value>
                    <fullName>By DN Expiry Date</fullName>
                </value>
                <value>
                    <fullName>After DN Expiry Date</fullName>
                </value>
                <value>
                    <fullName>Disconnected, Not Yet Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>